syntax = "proto3";

package discovery;

option go_package = "../proto";

service Discoverer {
    rpc Discovery (DiscoveryRequest) returns (DiscoveryResponse) {}
}

message Neighbor {
    bytes id = 1;
    string address = 2;
}

message DiscoveryRequest {
    bytes id = 1;
}

message DiscoveryResponse {
    repeated Neighbor neighbor_list = 1;
}