syntax = "proto3";

package discovery;

option go_package = "../proto";

service Bootstraper {
    rpc Bootstrap (BootstrapRequest) returns (BootstrapResponse) {}
}
  
message BootstrapRequest {
    bytes id = 1;
    string address = 2;
}

message BootstrapResponse {
    string message = 1;
}